[tool.poetry]
name = "teaching-material"
version = "0.1.0"
description = ""
authors = ["jonny.lu <jonny.lu@netis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
